@@ -88,8 +88,11 @@ Tcl_GetThreadData(
     result = TclThreadStorageKeyGet(keyPtr);
 
     if (result == NULL) {
-	result = ckalloc((size_t)size);
-	memset(result, 0, (size_t)size);
+	result = TclpSysAlloc((size_t) size, 0);
+	if (result == NULL) {
+	    Tcl_Panic("unable to alloc %u bytes", (unsigned) size);
+	}
+	memset(result, 0, (size_t) size);
 	TclThreadStorageKeySet(keyPtr, result);
     }
 #else /* TCL_THREADS */
@@ -133,7 +136,6 @@ TclThreadDataKeyGet(
     return *keyPtr;
 #endif /* TCL_THREADS */
 }
-
 
 /*
  *----------------------------------------------------------------------
